HUE-4375 [editor] Horizontal scrollbar can be hidden under the first fixed column

--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -2551,13 +2551,14 @@ body {
   color: #aaa;
 }
 
-.dataTables_wrapper:hover > .hue-scrollbar-x-rail {
+.dataTables_wrapper:hover > .hue-scrollbar-x-rail, .hue-scrollbar-x-rail:hover {
   opacity: 0.75
 }
 
 .hue-scrollbar-x-rail {
   opacity: 0;
   position: fixed;
+  z-index: 10000;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -2566,7 +2567,7 @@ body {
   -o-transition: background-color .2s linear, opacity .2s linear;
   transition: background-color .2s linear, opacity .2s linear;
   bottom: 3px;
-  height: 10px;
+  height: 9px;
 }
 
 
@@ -2580,8 +2581,8 @@ body {
   -moz-transition: background-color .2s linear;
   -o-transition: background-color .2s linear;
   transition: background-color .2s linear;
-  bottom: 0;
-  height: 10px;
+  bottom: 1px;
+  height: 9px;
   z-index: 10000;
 }
 
